Add logo styling

--- a/src/Header.css
+++ b/src/Header.css
@@ -7,3 +7,10 @@
   top: 1.04%;
   bottom: 97.72%;
 }
+.Header-logo {
+  position: absolute;
+  left: 9.17%;
+  right: 86.64%;
+  top: 1.04%;
+  bottom: 97.72%;
+}
