--- a/src/Container.css
+++ b/src/Container.css
@@ -5,7 +5,50 @@
   width: 575px;
   margin: auto;
 }
-.Container-header,
+
+.Container-header {
+  top: 150px;
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 44px;
+  color: #102261;
+  align-self: flex-start;
+  margin-top: 106px;
+}
+
 .Container-p {
-  text-align: center;
+  width: 557px;
+  align-self: flex-start;
+  font-size: 16px;
+  line-height: 24px;
+  color: #333333;
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.Container-input {
+  width: 100%;
+  height: 40px;
+  background-color: #efefef;
+  opacity: 0.7;
+  border-radius: 4px;
+  outline: none;
+  color: #393939;
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.015em;
+}
+
+@media only screen and (min-width: 320px) {
+  .Container,
+  .Container-input {
+  }
 }
