--- a/src/Container.css
+++ b/src/Container.css
@@ -45,10 +45,5 @@
   display: flex;
   align-items: center;
   letter-spacing: -0.015em;
-}
-
-@media only screen and (min-width: 320px) {
-  .Container,
-  .Container-input {
-  }
+  margin-bottom: 43px;
 }
