--- a/src/PersonCard.css
+++ b/src/PersonCard.css
@@ -1,10 +1,26 @@
 .PersonCard {
+  height: 96px;
   width: 100%;
   display: flex;
   align-items: center;
+  margin-bottom: 24px;
 }
+
+.PersonCard img {
+  height: 100%;
+}
+
 .PersonCard-info {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 24px;
+}
+
+.PersonCard-info p {
+  margin-top: 0px;
+}
+
+.PersonCard-info h3 {
+  margin-bottom: 20px;
 }
