--- a/src/Container.css
+++ b/src/Container.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   width: 575px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .Container-header {
@@ -46,6 +47,16 @@
   align-items: center;
   letter-spacing: -0.015em;
   margin-bottom: 43px;
+}
+
+@media screen and (max-width: 600px) {
+  .Container {
+    width: 90%;
+  }
+
+  .Container-p {
+    width: 90%;
+  }
 }
 
 label[for='namedInput'] {
