--- a/src/Container.css
+++ b/src/Container.css
@@ -19,6 +19,10 @@
   margin-top: 106px;
 }
 
+form {
+  width: 100%;
+}
+
 .Container-p {
   width: 557px;
   align-self: flex-start;
@@ -34,7 +38,6 @@
   width: 100%;
   height: 40px;
   background-color: #efefef;
-  opacity: 0.7;
   border-radius: 4px;
   outline: none;
   color: #393939;
@@ -47,6 +50,12 @@
   align-items: center;
   letter-spacing: -0.015em;
   margin-bottom: 43px;
+  border: none;
+  padding-left: 16px;
+}
+
+::placeholder {
+  color: #393939;
 }
 
 @media screen and (max-width: 600px) {
