--- a/src/Container.css
+++ b/src/Container.css
@@ -58,6 +58,12 @@ form {
   color: #393939;
 }
 
+ul.people-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 @media screen and (max-width: 600px) {
   .Container {
     width: 90%;
