--- a/src/Container.css
+++ b/src/Container.css
@@ -21,7 +21,7 @@
 
 form {
   width: 100%;
-  display: flex;
+  margin-bottom: 43px;
 }
 
 .Container-p {
@@ -50,7 +50,6 @@ form {
   display: flex;
   align-items: center;
   letter-spacing: -0.015em;
-  margin-bottom: 43px;
   border: none;
   padding-left: 16px;
 }
@@ -63,6 +62,8 @@ button.input-submit {
   visibility: hidden;
   margin: 0;
   padding: 0;
+  width: 0px;
+  height: 0px;
 }
 
 ul.people-list {
